# Bai-Tap-C

./: LCM & GCD 06.cpp  LCM & GCD 2.cpp  MOD3.cpp  P195SUMC.cpp  PRIME 14.cpp  PRIME 15.cpp  PRIME 17.cpp  PRIME18.cpp  RE2.cpp
Medianews/: 11_KhoangCachNhoNhat.cpp  126_NguyenToNhoHonN.cpp  129_PTThuaSoNguyenTo.cpp  12_Xoay90doNguoc.cpp  145_HinhBinhHanhSao.cpp  146_BinhHanhRong.cpp  160_KimTuThapNguocRong.cpp  161_NuaThoiPhai.cpp  162_NuaThoiTrai.cpp  163_VeHinhThoi.cpp  164_HinhChuaHinhThoi.cpp  165_MuiTenSangPhai.cpp  166_MuiTenSangTrai.cpp  181_ChuNhatB1.cpp  184_ChuNhatC2.cpp  186_ChuNhatD2.cpp  204_TamGiacA.cpp  205_TamGiacB1.cpp  206_TamGiacB2.cpp  207_TamGiacC2.cpp  209_TamGiacC3.cpp  210_TamGiacC4.cpp  211_VeTamGiac.cpp  212_TamGiacD2.cpp  213_TamGiacE1.cpp  214_TamGiacE2.cpp  215_TamGiacE3.cpp  216_TamGiacF.cpp  217_TamGiacG.cpp  220_TamGIacH2.cpp  222_TamGiacI.cpp  223_TamGiacJ.cpp  224_TamGiacK.c  225_TamGiacI2.cpp  22_MaTranChuyenVi.cpp  300_MaxMinTrongMang.cpp  305_CacPhanTuXuatHien1lan.cpp  309_DaoNguocMang.cpp  316_LonNhatVaLonThu2.cpp  318_HangCoNhieuNguyenToNhat.cpp  (+70 more)
abcxyz/: PRIME 16.cpp  Prime 12.cpp  prime6.cpp
