cmake_minimum_required(VERSION 3.16)
project(untitled1)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled1 main.cpp)
add_executable(Hihi Hihi.cpp )
add_executable(SoDep68 SoDep68.cpp)
add_executable(SoAchilles SoAchilles.cpp)
add_executable(Bcnn2So Bcnn2So.cpp)
add_executable(IsAmstrongNumber IsAmstrongNumber.cpp)
add_executable(TamGiacVuongPhaiRong TamGiacVuongPhaiRong.cpp)
add_executable(PhanTichThuaSoNguyenTo PhanTichThuaSoNguyenTo.cpp)
add_executable(SoThuanNghich SoThuanNghich.cpp)
add_executable(ThuanNghichVa3uocNguyenTo ThuanNghichVa3uocNguyenTo.cpp)
add_executable(NguyenToVaNghichDaoLaNT NguyenToVaNghichDaoLaNT.cpp)
add_executable(SoDepFiboVaNguyenTo SoDepFiboVaNguyenTo.cpp)
add_executable(test test.cpp)
add_executable(SoDepTangGiam SoDepTangGiam.cpp)
add_executable(SoNTchuSoCuoiLonNhat SoNTchuSoCuoiLonNhat.cpp)
add_executable(MinMaxMangVaViTri MinMaxMangVaViTri.cpp)
add_executable(ChenMangBvaoA ChenMangBvaoA.cpp)
add_executable(InsertionSort InsertionSort.cpp)
add_executable(SoThuanNghichKhong9 SoThuanNghichKhong9.cpp)
add_executable(ChenChuoiBvaoA ChenChuoiBvaoA.cpp)
add_executable(SapXepTheoTongChuSo SapXepTheoTongChuSo.cpp)
add_executable(SoNTtongChiaHet5 SoNTtongChiaHet5.cpp)
add_executable(DichMangSangTrai DichMangSangTrai.cpp)
add_executable(XoaPhanTuThuNtrongMang XoaPhanTuThuNtrongMang.cpp)
add_executable(DichMangSangPhai DichMangSangPhai.cpp)
add_executable(CacPhanTuXuatHien1lan 305_CacPhanTuXuatHien1lan.cpp)
add_executable(CacPhanTuXuatHienHon1Lan CacPhanTuXuatHienHon1Lan.cpp)
add_executable(CacPhanTuVaSoLanXuatHien CacPhanTuVaSoLanXuatHien.cpp)
add_executable(DemSoNguyenToTheoThuTu 32DemSoNguyenToTheoThuTu.cpp)
add_executable(830_SoLanXuatHienSNTtrongN 830_SoLanXuatHienSNTtrongN.cpp)
add_executable(300_MaxMinTrongMang 300_MaxMinTrongMang.cpp)
add_executable(325_ChiaMangChanLe 325_ChiaMangChanLe.cpp)
add_executable(309_DaoNguocMang 309_DaoNguocMang.cpp)
add_executable(316_LonNhatVaLonThu2 316_LonNhatVaLonThu2.cpp)
add_executable(347_HieuMaTran 347_HieuMaTran.cpp)
add_executable(831_SoPowerful 831_SoPowerful.cpp)
add_executable(126_NguyenToNhoHonN 126_NguyenToNhoHonN.cpp)
add_executable(TEEEETTT TEEEETTT.cpp)
add_executable(aaaaaaaaa aaaaaaaaa.cpp)
add_executable(haizzzz haizzzz.cpp)
add_executable(186_ChuNhatD2 186_ChuNhatD2.cpp)
add_executable(129_PTThuaSoNguyenTo 129_PTThuaSoNguyenTo.cpp)
add_executable(145_HinhBinhHanhSao 145_HinhBinhHanhSao.cpp)
add_executable(836_SelectionSort 836_SelectionSort.cpp)
add_executable(834_BubbleSort 834_BubbleSort.cpp)
add_executable(350_TongTamGiacTrenDuoi 350_TongTamGiacTrenDuoi.cpp)
add_executable(341_SapXepMaTranCot 341_SapXepMaTranCot.cpp)
add_executable(346_TongMaTran 346_TongMaTran.cpp)
add_executable(324_TongNguyenToTamGiacTren 324_TongNguyenToTamGiacTren.cpp)
add_executable(326_TongNguyenToTamGiacDuoi 326_TongNguyenToTamGiacDuoi.cpp)
add_executable(323_LoaiBoPhanTuTrung 323_LoaiBoPhanTuTrung.cpp)
add_executable(349_TongHangCotMaTran 349_TongHangCotMaTran.cpp)
add_executable(821_NguyenToDuongCheoChinhVaPhu 821_NguyenToDuongCheoChinhVaPhu.cpp)
add_executable(22_MaTranChuyenVi 22_MaTranChuyenVi.cpp)
add_executable(348_TichMaTran 348_TichMaTran.cpp)
add_executable(318_HangCoNhieuNguyenToNhat 318_HangCoNhieuNguyenToNhat.cpp)
add_executable(83_CotCoTongNhoNhat 83_CotCoTongNhoNhat.cpp)
add_executable(37_LoaiBoHangCotLonNhat 37_LoaiBoHangCotLonNhat.cpp)
add_executable(42_TichAvaChuyenViA 41_TichAvaChuyenViA.cpp)
add_executable(11_KhoangCachNhoNhat 11_KhoangCachNhoNhat.cpp)
add_executable(338_ChuyenHang 338_ChuyenHang.cpp)
add_executable(339_ChuyenCot 339_ChuyenCot.cpp)
add_executable(12_Xoay90doNguoc 12_Xoay90doNguoc.cpp)
add_executable(42_Xoay90doXuoi 42_Xoay90doXuoi.cpp)
add_executable(52_XoayMT180do 52_XoayMT180do.cpp)
add_executable(43_CotCoTongLonNhat 43_CotCoTongLonNhat.cpp)
add_executable(340_DoiDuongCheo 340_DoiDuongCheo.cpp)
add_executable(93_SoSNTtrenDuongCheoChinhPhu 94_SoSNTtrenDuongCheoChinhPhu.cpp)
add_executable(322_DemChuSoKiTu 322_DemChuSoKiTu.cpp)