cmake_minimum_required(VERSION 3.16)
project(untitled1)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled1 main.cpp)
add_executable(Hihi Hihi.cpp )
add_executable(SoDep68 SoDep68.cpp)
add_executable(SoAchilles SoAchilles.cpp)
add_executable(Bcnn2So Bcnn2So.cpp)
add_executable(IsAmstrongNumber IsAmstrongNumber.cpp)
add_executable(TamGiacVuongPhaiRong TamGiacVuongPhaiRong.cpp)
add_executable(PhanTichThuaSoNguyenTo PhanTichThuaSoNguyenTo.cpp)
add_executable(SoThuanNghich SoThuanNghich.cpp)
add_executable(ThuanNghichVa3uocNguyenTo ThuanNghichVa3uocNguyenTo.cpp)
add_executable(NguyenToVaNghichDaoLaNT NguyenToVaNghichDaoLaNT.cpp)
add_executable(SoDepFiboVaNguyenTo SoDepFiboVaNguyenTo.cpp)
add_executable(test test.cpp)
add_executable(SoDepTangGiam SoDepTangGiam.cpp)
add_executable(SoNTchuSoCuoiLonNhat SoNTchuSoCuoiLonNhat.cpp)
add_executable(MinMaxMangVaViTri MinMaxMangVaViTri.cpp)
add_executable(ChenMangBvaoA ChenMangBvaoA.cpp)
add_executable(InsertionSort InsertionSort.cpp)
add_executable(SoThuanNghichKhong9 SoThuanNghichKhong9.cpp)
add_executable(ChenChuoiBvaoA ChenChuoiBvaoA.cpp)
add_executable(SapXepTheoTongChuSo SapXepTheoTongChuSo.cpp)
add_executable(SoNTtongChiaHet5 SoNTtongChiaHet5.cpp)
add_executable(DichMangSangTrai DichMangSangTrai.cpp)
add_executable(XoaPhanTuThuNtrongMang XoaPhanTuThuNtrongMang.cpp)
add_executable(DichMangSangPhai DichMangSangPhai.cpp)
add_executable(CacPhanTuXuatHien1lan 305_CacPhanTuXuatHien1lan.cpp)
add_executable(CacPhanTuXuatHienHon1Lan CacPhanTuXuatHienHon1Lan.cpp)
add_executable(CacPhanTuVaSoLanXuatHien CacPhanTuVaSoLanXuatHien.cpp)
add_executable(DemSoNguyenToTheoThuTu 32DemSoNguyenToTheoThuTu.cpp)
add_executable(830_SoLanXuatHienSNTtrongN 830_SoLanXuatHienSNTtrongN.cpp)
add_executable(300_MaxMinTrongMang 300_MaxMinTrongMang.cpp)
add_executable(325_ChiaMangChanLe 325_ChiaMangChanLe.cpp)
add_executable(309_DaoNguocMang 309_DaoNguocMang.cpp)
add_executable(316_LonNhatVaLonThu2 316_LonNhatVaLonThu2.cpp)
add_executable(347_HieuMaTran 347_HieuMaTran.cpp)
add_executable(831_SoPowerful 831_SoPowerful.cpp)
add_executable(126_NguyenToNhoHonN 126_NguyenToNhoHonN.cpp)
add_executable(TEEEETTT TEEEETTT.cpp)
add_executable(aaaaaaaaa aaaaaaaaa.cpp)
add_executable(haizzzz haizzzz.cpp)
add_executable(186_ChuNhatD2 186_ChuNhatD2.cpp)
add_executable(129_PTThuaSoNguyenTo 129_PTThuaSoNguyenTo.cpp)
add_executable(145_HinhBinhHanhSao 145_HinhBinhHanhSao.cpp)
add_executable(836_SelectionSort 836_SelectionSort.cpp)
add_executable(834_BubbleSort 834_BubbleSort.cpp)
add_executable(350_TongTamGiacTrenDuoi 350_TongTamGiacTrenDuoi.cpp)
add_executable(341_SapXepMaTranCot 341_SapXepMaTranCot.cpp)
add_executable(346_TongMaTran 346_TongMaTran.cpp)
add_executable(324_TongNguyenToTamGiacTren 324_TongNguyenToTamGiacTren.cpp)
add_executable(326_TongNguyenToTamGiacDuoi 326_TongNguyenToTamGiacDuoi.cpp)
add_executable(323_LoaiBoPhanTuTrung 323_LoaiBoPhanTuTrung.cpp)
add_executable(349_TongHangCotMaTran 349_TongHangCotMaTran.cpp)
add_executable(821_NguyenToDuongCheoChinhVaPhu 821_NguyenToDuongCheoChinhVaPhu.cpp)
add_executable(22_MaTranChuyenVi 22_MaTranChuyenVi.cpp)
add_executable(348_TichMaTran 348_TichMaTran.cpp)
add_executable(318_HangCoNhieuNguyenToNhat 318_HangCoNhieuNguyenToNhat.cpp)
add_executable(83_CotCoTongNhoNhat 83_CotCoTongNhoNhat.cpp)
add_executable(37_LoaiBoHangCotLonNhat 37_LoaiBoHangCotLonNhat.cpp)
add_executable(42_TichAvaChuyenViA 41_TichAvaChuyenViA.cpp)
add_executable(11_KhoangCachNhoNhat 11_KhoangCachNhoNhat.cpp)
add_executable(338_ChuyenHang 338_ChuyenHang.cpp)
add_executable(339_ChuyenCot 339_ChuyenCot.cpp)
add_executable(12_Xoay90doNguoc 12_Xoay90doNguoc.cpp)
add_executable(42_Xoay90doXuoi 42_Xoay90doXuoi.cpp)
add_executable(52_XoayMT180do 52_XoayMT180do.cpp)
add_executable(43_CotCoTongLonNhat 43_CotCoTongLonNhat.cpp)
add_executable(340_DoiDuongCheo 340_DoiDuongCheo.cpp)
add_executable(93_SoSNTtrenDuongCheoChinhPhu 94_SoSNTtrenDuongCheoChinhPhu.cpp)
add_executable(322_DemChuSoKiTu 322_DemChuSoKiTu.cpp)
add_executable(211_VeTamGiac 211_VeTamGiac.cpp)
add_executable(209_TamGiacC3 209_TamGiacC3.cpp)
add_executable(213_TamGiacE1 213_TamGiacE1.cpp)
add_executable(215_TamGiacE3 215_TamGiacE3.cpp)
add_executable(217_TamGiacG 217_TamGiacG.cpp)
add_executable(222_TamGiacI 222_TamGiacI.cpp)
add_executable(223_TamGiacJ 223_TamGiacJ.cpp)
add_executable(207_TamGiacC2 207_TamGiacC2.cpp)
add_executable(214_TamGiacE2 214_TamGiacE2.cpp)
add_executable(225_TamGiacI2 225_TamGiacI2.cpp)
add_executable(212_TamGiacD2 212_TamGiacD2.cpp)
add_executable(210_TamGiacC4 210_TamGiacC4.cpp)
add_executable(205_TamGiacB1 205_TamGiacB1.cpp)
add_executable(206_TamGiacB2 206_TamGiacB2.cpp)
add_executable(332_TamGiacE3 332_TamGiacE3.cpp)
add_executable(182_ChuNhatB2 146_BinhHanhRong.cpp)
add_executable(184_ChuNhatC2 184_ChuNhatC2.cpp)
add_executable(204_TamGiacA 204_TamGiacA.cpp)
add_executable(181_ChuNhatB1 181_ChuNhatB1.cpp)
add_executable(160_KimTuThapNguocRong 160_KimTuThapNguocRong.cpp)
add_executable(163_VeHinhThoi 163_VeHinhThoi.cpp)
add_executable(161_NuaThoiPhai 161_NuaThoiPhai.cpp)
add_executable(162_NuaThoiTrai 162_NuaThoiTrai.cpp)
add_executable(164_HinhChuaHinhThoi 164_HinhChuaHinhThoi.cpp)
add_executable(165_MuiTenSangPhai 165_MuiTenSangPhai.cpp)
add_executable(166_MuiTenSangTrai 166_MuiTenSangTrai.cpp)
add_executable(335_TamGiacE2 335_TamGiacE2.cpp)
add_executable(MediaNews13_6 MediaNews13_6.c)
add_executable(Cuong Cuong.cpp)
add_executable(344_LoaiBoTuTrung 344_LoaiBoTuTrung.cpp)
add_executable(48_ChuanHoaHoTen 48_ChuanHoaHoTen.cpp)
add_executable(49_ChuanHoaHoTen 49_ChuanHoaHoTen.cpp)
add_executable(342_LoaiBoTu 342_LoaiBoTu.cpp)
add_executable(46_EmailPTIT 46_EmailPTIT.cpp)
add_executable(45_ChuanHoaHoTen 45_ChuanHoaHoTen.cpp)
add_executable(822_EmailPTITB 822_EmailPTITB.cpp)
add_executable(343_SoLanTuXuatHien 343_SoLanTuXuatHien.cpp)
add_executable(57_LongestAndShortestString 57_LongestAndShortestString.cpp)
add_executable(47_TapTuRieng 47_TapTuRieng.cpp)
add_executable(216_TamGiacF 216_TamGiacF.cpp)
add_executable(224_TamGiacK 224_TamGiacK.c)
add_executable(220_TamGIacH2 220_TamGIacH2.cpp)